syntax = "proto3";

package io.restorecommerce.meta;

// meta properties common to all resources

message Meta {
    double created = 1; // timestamp
    double modified = 2; // timestamp
    string modified_by = 3; // ID from last User who modified it
    repeated Owner owner = 4;
    message Owner {
        string id = 1; // a URN for a User or an Organization
        string value = 2; // a resource UUID
    }
}